# mancala

./: Cargo.toml  README.md
ai/: Cargo.toml  README.md
ai/src/: main.rs
bank_bird/: Cargo.toml  README.md
bank_bird/src/: lib.rs  main.rs  plot.rs
bank_bird/src/algorithm/: deterministic.rs  mix.rs  mod.rs  random.rs
bank_bird/src/algorithm/bank_bird/: bank_bird_1.rs  bank_bird_2.rs  bank_bird_3.rs  bank_bird_4.rs  bank_bird_ai.rs  mod.rs
board/: Cargo.toml  README.md
board/examples/: cli.rs
board/src/: base.rs  lib.rs  test.rs  util.rs  variants.rs
board/src/test/: avalache.rs  base.rs  kalah.rs  mod.rs  oware.rs
gui/: Cargo.toml
gui/src/: game.rs  gui.rs  main.rs
gui/src/gui/: board.rs  display.rs  util.rs
src/: lib.rs  main.rs
