[package]
name = "bank_bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mancala_board = { path = "../board" }
rand = "0.8.5"
term_grid = "0.2.0"
rayon = "1.6.0"
derive_more = "0.99.17"
owo-colors = "3.5.0"
