[package]
name = "bank_bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mancala_board = { path = "../board" }
rand = "0.8.5"
term_grid = "0.2.0"
rayon = "1.10.0"
derive_more = { version = "1.0.0", features = ["full"] }
owo-colors = "4.1.0"
